# knacit-tools

./: .gitignore  AGENTS.md  README.md
.claude/: settings.json
docs/: DECISIONS.md
methods/cross-analysis/: README.md  human-in-the-loop.md  human-territory.md  the-fabricated-citation.md
methods/cross-analysis/research/: 01-embodiment.md  02-tacit-knowledge.md  03-empathy.md  04-trust-disclosure.md  05-responsibility.md  ALIGNMENT-AUDIT.md  README.md  SOURCES.md
tools/crosstab/: .gitignore  AGENTS.md  README.md  pyproject.toml
tools/crosstab/src/crosstab/: __init__.py  __main__.py  core.py  schema.py  stats.py  validate.py
tools/crosstab/tests/: test_crosstab.py
