[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crosstab"
version = "0.1.0"
description = "Statistically honest cross-tabulation: chi-square, adjusted residuals, and effect size with built-in assumption checks."
requires-python = ">=3.9"
dependencies = [
    "scipy>=1.10",
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
crosstab = "crosstab.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
